--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -29,10 +29,10 @@
         </include>
     </coverage>
 
-    <listeners>
+    <!-- <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
-
+ -->
     <!-- Run `composer require symfony/panther` before enabling this extension -->
     <!--
     <extensions>
