--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,9 +4,11 @@ services:
 ###> symfony/mailer ###
   mailer:
     image: schickling/mailcatcher
-    ports: [1025, 1080]
+    ports: 
+    -1025:1025
+    -1080:1080
 ###< symfony/mailer ###
-
+###[1025, 1080]
 ###> doctrine/doctrine-bundle ###
   database:
     ports:
